# rabbitmq-basic-usage-tutorial

./: docker-compose.yml  pyproject.toml  receiver.py  reciver.py  sender.py
acknowledge/: sender.py
authenticated/: receiver.py
